# graphene

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  format.sh  library.json
.github/workflows/: graphene-ci.yml
Testing/: TAG
Testing/20240703-2340/: Test.xml
Testing/20240703-2341/: Test.xml
examples/: CMakeLists.txt  CheckerBoard.cpp  Creeper.cpp  FrameBufferToPPM.cpp  Pillager.cpp  Trigonometric.cpp
examples/canvas_demo/: checkerboard_demo.cpp  creeper.cpp  font_glyphs_demo.cpp  image_demo.cpp  read_and_re_export_demo.cpp  trigonometric.cpp
examples/gui_demo/: MainView.cpp  MainView.h  gui_demo.cpp
examples/string_demo/: string_demo.cpp
examples/vectors_demo/: vector_demo.cpp
scripts/: colors.sh  format.sh  install-hooks.sh  publish.sh  tests.sh
scripts/hooks/: pre-commit  pre-push  prepare-commit-msg
src/: Graphene.h
src/components/layouts/: HorizontalLayout.cpp  HorizontalLayout.h  PaginatedView.cpp  PaginatedView.h  VerticalLayout.cpp  VerticalLayout.h
src/components/widgets/: Button.cpp  Button.h  CheckBox.cpp  CheckBox.h  Label.cpp  Label.h  ProgressBar.cpp  ProgressBar.h  Slider.cpp  Slider.h
src/core/: Color.cpp  Color.h  Event.h  EventConsumer.h  EventPublisher.h  EventQueue.cpp  EventQueue.h  Font.cpp  Font.h  FrameBuffer.h  GrapheneFonts.h  Object.cpp  Object.h  Point.cpp  Point.h  Screen.cpp  Screen.h  ScreenDriver.h  String.cpp  String.h  Variant.h
src/driver/: FrameBuffer.cpp  FrameBuffer.h  Screen.h  VirtualScreenDriver.cpp  VirtualScreenDriver.h
src/drivers/: NoTouchDriver.h
src/drivers/NodeMCU/: NodeMCU_TFT.h
src/drivers/STM32F769I/: STM32F769I_Canvas.h  STM32F769I_Touch.h  STMFonts.h
src/events/: TouchEvent.h
src/geometry/: Circle.cpp  Circle.h  Constants.h  Line.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h
src/image/: Image.cpp  Image.h
src/interfaces/: AbstractCanvas.cpp  AbstractCanvas.h  AbstractShape.cpp  AbstractShape.h  AbstractTouchInput.cpp  AbstractTouchInput.h  IContainer.cpp  IContainer.h  IDrawable.h  IWidget.cpp  IWidget.h
src/math/: Point.cpp  Point.h  Rect.cpp  Rect.h  Vector3D.cpp  Vector3D.h
src/runtime/: GrapheneApp.cpp  GrapheneApp.h
tests/: CMakeLists.txt  Graphene.spec.cpp
tests/Testing/: TAG
tests/Testing/20240703-2340/: Test.xml
tests/core/: Color.spec.h  GrapheneCore.spec.cpp  Object.spec.h  Point.spec.h  String.spec.h  Variant.spec.h
tests/driver/: FrameBuffer.spec.h  GrapheneDriver.spec.cpp  VirtualScreenDriver.spec.h
tests/math/: GrapheneMath.spec.cpp
